update response types and swagger doc
